--- a/front-end/src/css/home.css
+++ b/front-end/src/css/home.css
@@ -1,6 +1,6 @@
 .icon{
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     cursor: pointer;
     padding: 20px;
 }
@@ -9,3 +9,7 @@
     border-radius: 10px;
     
 }
+
+ #sidebar {
+     transition: transform 0.3s ease;
+ }
